syntax = "proto3";
option go_package = ".;pb";
message Empty {}

message PushMessage {
  string method = 1;
  string body = 2;
}